--- a/html/sites/all/themes/custom/ocha-basic/assets/sass/components/cd-header/_cd-nav.scss
+++ b/html/sites/all/themes/custom/ocha-basic/assets/sass/components/cd-header/_cd-nav.scss
@@ -33,7 +33,6 @@
   display: inline-block;
 }
 
-
 .cd-nav a {
   display: block;
   line-height: 1;
@@ -50,7 +49,7 @@
     right: -1px;
     top: 2px;
     height: $base-unit*1.5;
-    z-index: 1;
+    z-index: map-get($zindex, default);
   }
 
   .icon-arrow-down {
