--- a/html/sites/all/themes/custom/ocha-basic/assets/sass/components/cd-header/_cd-site-header.scss
+++ b/html/sites/all/themes/custom/ocha-basic/assets/sass/components/cd-header/_cd-site-header.scss
@@ -274,7 +274,6 @@ input.cd-header-search__input:focus + * + .cd-header-search__active {
     width: auto;
     max-width: none;
     background: none;
-    z-index: auto;
 
     .no-flexbox & {
       float: right;
